tests/semantic/keys/keys.err
Error: Key not found in relation definition. in file keys.dl at line 11
.decl rel2(x:symbol, y:symbol) keys (x, z)
------------------------------------^------
Error: Key not found in relation definition. in file keys.dl at line 14
.decl rel3(x:symbol, y:symbol) keys z
------------------------------------^-
Error: Key not found in relation definition. in file keys.dl at line 17
.decl rel4() keys z
------------------^-
3 errors generated, evaluation aborted
